--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:      /:year-:month-:day/:title
 
 # Setup
-title:          Tale
+title:          Andrezio
 paginate:       5
 baseurl:        "/tale"
 url:            "https://chesterhow.github.io"
@@ -17,9 +17,9 @@ markdown:       kramdown
 
 # About
 author:
-  name:         Chester How
-  url:          http://chester.how
-  email:        chesterhow@gmail.com
+  name:         Andre S. B. da Silva
+  url:          ""
+  email:        andrezio@live.com
 
 # Custom vars
 version:        3.4.1
